components/test-component-yhof/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app-qozv
    appstudio.openshift.io/component: test-component-yhof
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component-yhof
  namespace: build-e2e-hacbs-tuhv
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component-yhof
    weight: null
status: {}
